#LAPR4E17DL-211 #comment added the operators in the list and menu option removed #time 1h

--- a/src/main/java/lapr4/green/s3/lang/n1130626/intermediatewizard/ui/InsertFunctionUI.form
+++ b/src/main/java/lapr4/green/s3/lang/n1130626/intermediatewizard/ui/InsertFunctionUI.form
@@ -92,7 +92,7 @@
                   <Component id="resultLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="previewButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="47" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="cancelButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="insertButton" alignment="3" min="-2" max="-2" attributes="0"/>
