LAPR4E17DL-196 LAPR4E17DL-197 #comment finish the implementation, unit tests and javadoc

--- a/src/main/java/lapr4/green/s1/ipc/n1970581/findworkbook/ui/SearchWorkbookPanel.form
+++ b/src/main/java/lapr4/green/s1/ipc/n1970581/findworkbook/ui/SearchWorkbookPanel.form
@@ -93,6 +93,9 @@
         <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="Press [Root] to select search directory..."/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldRootActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonSearch">
       <Properties>
