LAPR4E17DL-219 - Final touches

--- a/src/main/java/lapr4/blue/s3/core/n1140948/contactstag/ui/AssociateTagUI.form
+++ b/src/main/java/lapr4/blue/s3/core/n1140948/contactstag/ui/AssociateTagUI.form
@@ -261,7 +261,7 @@
                 <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
               </AccessibilityProperties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Tag&gt;"/>
               </AuxValues>
             </Component>
           </SubComponents>
@@ -303,7 +303,7 @@
                 </Property>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Contact&gt;"/>
               </AuxValues>
             </Component>
           </SubComponents>
