--- a/src/main/java/lapr4/blue/s3/core/n1140948/contactstag/ui/TagFrequency.form
+++ b/src/main/java/lapr4/blue/s3/core/n1140948/contactstag/ui/TagFrequency.form
@@ -111,7 +111,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JList" name="listTags">
+                <Component class="javax.swing.JList" name="listFreqs">
                   <Properties>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="5">
@@ -171,7 +171,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JList" name="listFrequency">
+                <Component class="javax.swing.JList" name="listTags">
                   <Properties>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="5">
